--- a/maven02/src/main/webapp/sources/css/mystyle.css
+++ b/maven02/src/main/webapp/sources/css/mystyle.css
@@ -8,6 +8,7 @@
 	min-width:400px;
 	background: #f2f2f2;
 	margin:0 auto;
+	margin-top:30px;
     padding-bottom:50px;	
 	opacity:0.9;
 	filter:alpha(opacity=90);
@@ -42,11 +43,13 @@
 	margin-top: 10px;
 }
 .input_self{
-	width: 100%;
-	height: 30px;
+	width: 60%;
+	height: 40px;
+	font-size:16px;
 	border:1px solid #438eb9;
 	text-indent:10px;
-	outline:none
+	outline:none;
+	margin-left:20%;
 }
 .input_self:focus{
 	box-shadow:0px 0px 6px #438eb9;
@@ -58,6 +61,38 @@
 	margin-top: 50px;	
 }
 .finish_btn{
+	width: 60%;
+	height: 40px;
+	line-height:40px;
+	background: #66a3ff;
+	color:#fff;
+	border:none;
+	outline:none;
+	cursor:pointer;
+	margin-left:20%;
+}
+.finish_btn:hover{
+	box-shadow:0px 0px 3px #000;
+}
+.signup{
+	width: 5%;
+	height: 40px;
+	line-height:40px;
+	background: #66a3ff;
+	color:#fff;
+	border:none;
+	outline:none;
+	cursor:pointer;
+}
+.signupdiv{
+	text-align:right;
+}
+.adminlogindiv{
+	width: 30%;
+	text-align:center;
+	margin-left:35%;
+}
+.adminlogin{
 	width: 100%;
 	height: 40px;
 	line-height:40px;
@@ -65,11 +100,11 @@
 	color:#fff;
 	border:none;
 	outline:none;
-	cursor:pointer
+	cursor:pointer;
+	opacity:0.87;
+	filter:alpha(opacity=90);
 }
-.finish_btn:hover{
-	box-shadow:0px 0px 3px #000;
-}
+
 .blank_30{
 	height:30px;
 }
